# simple_vcs

./: .flake8  .gitignore  CHANGELOG_V1.2.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_svcs.py  setup.py  workflow.yml
.github/workflows/: python-package.yml
simple_vcs/: cli.py  core.py
simple_vcs.egg-info/: PKG-INFO  requires.txt
test_project/: hello.txt
test_project/.svcs/: commits.json
