[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-vcs"
version = "1.2.0"
description = "A beautiful and simple version control system with a modern terminal interface"
authors = [
    { name = "Muhammad Sufiyan Baig", email = "send.sufiyan@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "click>=7.0",
    "rich>=10.0.0"
]
license = { file = "LICENSE" }
keywords = ["version-control", "vcs", "simple-vcs", "backup", "snapshot"]

[project.urls]
Homepage = "https://github.com/muhammadsufiyanbaig/simple_vcs/"
Repository = "https://github.com/muhammadsufiyanbaig/simple_vcs.git"
Issues = "https://github.com/muhammadsufiyanbaig/simple_vcs/issues"

[project.scripts]
svcs = "simple_vcs.cli:main"
